// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FloatButton should match to snapshot 1`] = `
<View
  accessibilityHint="Tap to activate"
  accessibilityLabel="Float button"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  role="button"
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 9999,
        "elevation": 4,
        "justifyContent": "center",
        "position": "absolute",
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.15,
        "shadowRadius": 8,
        "variants": {
          "disabled": {
            "true": {
              "backgroundColor": "#EEF1F4",
              "opacity": 0.5,
            },
          },
          "position": {
            "bottom-left": {
              "bottom": 24,
              "left": 24,
            },
            "bottom-right": {
              "bottom": 24,
              "right": 24,
            },
            "top-left": {
              "left": 24,
              "top": 24,
            },
            "top-right": {
              "right": 24,
              "top": 24,
            },
          },
          "size": {
            "lg": {
              "height": 64,
              "width": 64,
            },
            "md": {
              "height": 54,
              "width": 54,
            },
            "sm": {
              "height": 44,
              "width": 44,
            },
          },
          "variant": {
            "destructive": {
              "backgroundColor": "#ED2E7E",
            },
            "primary": {
              "backgroundColor": "#1877F2",
            },
            "secondary": {
              "backgroundColor": "#EEF1F4",
            },
          },
        },
      },
      false,
    ]
  }
  testID="float-button-pressable"
>
  <View
    style={
      {
        "alignItems": "center",
        "justifyContent": "center",
        "variants": {
          "variant": {
            "destructive": {
              "color": "#FFFFFF",
            },
            "primary": {
              "color": "#FFFFFF",
            },
            "secondary": {
              "color": "#4E4B66",
            },
          },
        },
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={24}
      bbWidth={24}
      fill="none"
      focusable={false}
      height={24}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 24,
            "width": 24,
          },
        ]
      }
      vbHeight={24}
      vbWidth={24}
      width={24}
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
          ]
        }
      >
        <RNSVGPath
          d="M12 5v14M5 12h14"
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          propList={
            [
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4294967295,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</View>
`;

exports[`FloatButton should render with a specific icon 1`] = `
<View
  accessibilityHint="Tap to activate"
  accessibilityLabel="Float button"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  iconName="pencil"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  role="button"
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 9999,
        "elevation": 4,
        "justifyContent": "center",
        "position": "absolute",
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.15,
        "shadowRadius": 8,
        "variants": {
          "disabled": {
            "true": {
              "backgroundColor": "#EEF1F4",
              "opacity": 0.5,
            },
          },
          "position": {
            "bottom-left": {
              "bottom": 24,
              "left": 24,
            },
            "bottom-right": {
              "bottom": 24,
              "right": 24,
            },
            "top-left": {
              "left": 24,
              "top": 24,
            },
            "top-right": {
              "right": 24,
              "top": 24,
            },
          },
          "size": {
            "lg": {
              "height": 64,
              "width": 64,
            },
            "md": {
              "height": 54,
              "width": 54,
            },
            "sm": {
              "height": 44,
              "width": 44,
            },
          },
          "variant": {
            "destructive": {
              "backgroundColor": "#ED2E7E",
            },
            "primary": {
              "backgroundColor": "#1877F2",
            },
            "secondary": {
              "backgroundColor": "#EEF1F4",
            },
          },
        },
      },
      false,
    ]
  }
  testID="float-button-pressable"
>
  <View
    style={
      {
        "alignItems": "center",
        "justifyContent": "center",
        "variants": {
          "variant": {
            "destructive": {
              "color": "#FFFFFF",
            },
            "primary": {
              "color": "#FFFFFF",
            },
            "secondary": {
              "color": "#4E4B66",
            },
          },
        },
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={24}
      bbWidth={24}
      fill="none"
      focusable={false}
      height={24}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 24,
            "width": 24,
          },
        ]
      }
      vbHeight={24}
      vbWidth={24}
      width={24}
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
          ]
        }
      >
        <RNSVGPath
          d="M12 5v14M5 12h14"
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          propList={
            [
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4294967295,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</View>
`;
